--- a/src/components/navLeft/style.less
+++ b/src/components/navLeft/style.less
@@ -1,4 +1,17 @@
 .navleft {
-    padding: 10px;
-    height: 100vh;
+    .logo {
+        display: flex;
+        align-items: center;
+        height: 80px;
+        padding: 0 20px;
+        color: #ffffff;
+        img {
+            margin-right: 10px;
+        }
+        span {
+            color: #ffffff;
+            font-weight: bold;
+            font-size: 18px;
+        }
+    }
 }
