--- a/src/components/header/style.less
+++ b/src/components/header/style.less
@@ -1,5 +1,39 @@
-.header-user {
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
+.admin-header {
+    background-color: #ffffff;
+    .header-top, .header-bottom {
+        display: flex;
+        align-items: center;
+        padding: 10px 20px;
+    }
+    .header-top {
+        justify-content: flex-end;
+        border-bottom: 1px solid #dddddd;
+    }
+    .header-bottom {
+        .header-bottom-nav {
+            width: 25%;
+            text-align: center;
+            position: relative;
+            &::after {
+                content: '';
+                position: absolute;
+                left: 50%;
+                top: 100%;
+                transform: translateX(-50%);
+                border: 20px solid transparent;
+                border-top-color: #ffffff;
+                z-index: 10;
+            }
+        }
+        .header-bottom-weather {
+            width: 75%;
+            display: flex;
+            align-items: center;
+            justify-content: flex-end;
+            img {
+                margin: 0 8px;
+                height: 20px;
+            }
+        }
+    }
 }
